[gd_scene load_steps=21 format=2]

[ext_resource path="res://models/powerups/enemy-wipe.glb" type="PackedScene" id=1]
[ext_resource path="res://models/powerups/medkit.glb" type="PackedScene" id=2]
[ext_resource path="res://models/powerups/ammo.glb" type="PackedScene" id=3]
[ext_resource path="res://scenes/entities/powerups/Powerup.gd" type="Script" id=4]
[ext_resource path="res://sounds/use-powerup.mp3" type="AudioStream" id=5]
[ext_resource path="res://models/powerups/template.glb" type="PackedScene" id=6]

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Meshes:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Outline:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1.4, 1.2, 1.4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Outline:material/0:albedo_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.0106442 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("WarningOutline:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.1, 0.1, 0.1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("WarningOutline:material/0:albedo_color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.0106442 ) ]
}

[sub_resource type="Animation" id=1]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Meshes:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 360 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Outline:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 0.4, 0.4, 0.4 ),
"update": 0,
"values": [ Vector3( 0.1, 0.1, 0.1 ), Vector3( 1.6, 1.6, 1.6 ), Vector3( 4, 4, 4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Outline:material/0:albedo_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.0117647 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("WarningOutline:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 0.4, 0.4, 0.4 ),
"update": 0,
"values": [ Vector3( 0.1, 0.1, 0.1 ), Vector3( 1.6, 1.6, 1.6 ), Vector3( 4, 4, 4 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("WarningOutline:material/0:albedo_color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 0.4, 0.4, 0.4 ),
"update": 0,
"values": [ Color( 1, 0, 0, 0 ), Color( 1, 0, 0, 0.0784314 ), Color( 1, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Meshes:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "creation"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector3( 0.001, 0.001, 0.001 ), Vector3( 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 0.001, 0.001, 0.001 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "use"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Meshes:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.14, 0.19 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 2, 2, 2 ), Vector3( 0.001, 0.001, 0.001 ) ]
}

[sub_resource type="BoxShape" id=6]

[sub_resource type="CylinderMesh" id=7]
top_radius = 0.45
bottom_radius = 0.45
height = 0.2
radial_segments = 8
rings = 1

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 1, 0.470588, 0, 1 )

[sub_resource type="SpatialMaterial" id=9]
albedo_color = Color( 0.207843, 0.517647, 0.894118, 1 )

[sub_resource type="SpatialMaterial" id=10]
albedo_color = Color( 0.180392, 0.760784, 0.494118, 1 )

[sub_resource type="SphereMesh" id=28]
height = 1.6
radial_segments = 8
rings = 8

[sub_resource type="SpatialMaterial" id=29]
flags_transparent = true
flags_unshaded = true
flags_world_triplanar = true
albedo_color = Color( 1, 1, 1, 0.0106442 )

[sub_resource type="SpatialMaterial" id=30]
flags_transparent = true
flags_unshaded = true
flags_world_triplanar = true
albedo_color = Color( 1, 1, 1, 0.0106442 )

[node name="Powerup" type="Area" groups=["powerups"]]
script = ExtResource( 4 )

[node name="BackgroundAnimations" type="AnimationPlayer" parent="."]
autoplay = "spin"
anims/RESET = SubResource( 14 )
anims/spin = SubResource( 1 )

[node name="MainAnimations" type="AnimationPlayer" parent="."]
autoplay = "creation"
anims/RESET = SubResource( 13 )
anims/creation = SubResource( 4 )
anims/hide = SubResource( 5 )
anims/use = SubResource( 2 )

[node name="CountdownTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "SFX"

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 6 )

[node name="Meshes" type="Spatial" parent="."]

[node name="Ammo" parent="Meshes" instance=ExtResource( 3 )]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0, 0 )
visible = false

[node name="Medkit" parent="Meshes" instance=ExtResource( 2 )]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0, 0 )
visible = false

[node name="EnemyWipe" parent="Meshes" instance=ExtResource( 1 )]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0, 0 )
visible = false

[node name="LaserTypes" type="Spatial" parent="Meshes"]
visible = false

[node name="base" parent="Meshes/LaserTypes" instance=ExtResource( 6 )]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0, 0 )

[node name="Fire" type="MeshInstance" parent="Meshes/LaserTypes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, 0 )
visible = false
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="Ice" type="MeshInstance" parent="Meshes/LaserTypes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, 0 )
visible = false
mesh = SubResource( 7 )
material/0 = SubResource( 9 )

[node name="Corrosion" type="MeshInstance" parent="Meshes/LaserTypes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, 0 )
visible = false
mesh = SubResource( 7 )
material/0 = SubResource( 10 )

[node name="Outline" type="MeshInstance" parent="."]
transform = Transform( 1.4, 0, 0, 0, 1.2, 0, 0, 0, 1.4, 0, 0, 0 )
mesh = SubResource( 28 )
skeleton = NodePath("../..")
material/0 = SubResource( 29 )

[node name="WarningOutline" type="MeshInstance" parent="."]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )
visible = false
mesh = SubResource( 28 )
skeleton = NodePath("../..")
material/0 = SubResource( 30 )

[connection signal="area_entered" from="." to="." method="_on_Powerup_area_entered"]
[connection signal="animation_finished" from="MainAnimations" to="." method="_on_MainAnimations_animation_finished"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_CountdownTimer_timeout"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
